# poc-stac

./: README.md  pyproject.toml
poc-stac/: use_rio_stac.py  use_stactools.py
